tests/parser/tinvifstmt.nim
discard """
  errormsg: "invalid indentation"
  line: 9
  column: 3
"""

if true:
    echo "a"
  elif:
    echo "b"
 else:
   echo "c"
